Modifiche estetiche + style.scss

--- a/esercitazione_9settimana/car-dealership/src/app/app.component.html
+++ b/esercitazione_9settimana/car-dealership/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-navbar></app-navbar>
 </header>
 
-<main class="my-3">
+<main class="py-5 bg-neutral">
   <router-outlet></router-outlet>
 </main>
 
