--- a/esercitazione_9settimana/car-dealership/src/app/main-components/navbar/navbar.component.html
+++ b/esercitazione_9settimana/car-dealership/src/app/main-components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-body-tertiary">
+<nav class="navbar navbar-expand-md bg-complementary">
   <div class="container-fluid">
     <img
       src="https://cdn.prowebdesigns.co.uk/media/2016/08/28155353/Logo-Design-SCS1-min.jpg"
