--- a/esercitazione_9settimana/car-dealership/src/app/main-components/footer/footer.component.html
+++ b/esercitazione_9settimana/car-dealership/src/app/main-components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="py-3 mt-4 bg-body-tertiary">
+<footer class="py-4 bg-complementary">
   <ul class="nav justify-content-center border-bottom pb-3 mb-3">
     <li class="nav-item">
       <a routerLink="#" class="nav-link px-2 text-body-secondary">Home</a>
@@ -16,5 +16,5 @@
       <a routerLink="#" class="nav-link px-2 text-body-secondary">About</a>
     </li>
   </ul>
-  <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+  <p class="text-center text-body-secondary">&copy; Surrey Car Shop, 2024</p>
 </footer>
