--- a/esercitazione_9settimana/car-dealership/src/app/pages/ford/ford.component.html
+++ b/esercitazione_9settimana/car-dealership/src/app/pages/ford/ford.component.html
@@ -6,11 +6,11 @@
         alt="brand logo"
         class="car-brand"
       />
-      <p>Le nostre {{ fordCarArray[0].brand }}</p>
+      <h3>Le nostre {{ fordCarArray[0].brand }}</h3>
     </div>
     <div class="col-12 col-md-6" *ngFor="let car of fordCarArray">
       <div
-        class="card h-100"
+        class="card h-100 text-blu-scuro"
         [ngClass]="{
           'bg-success': car.available,
           'bg-danger': !car.available
