Modifica colori esaurito/disponibile, modifica padding

--- a/esercitazione_9settimana/car-dealership/src/app/main-components/navbar/navbar.component.scss
+++ b/esercitazione_9settimana/car-dealership/src/app/main-components/navbar/navbar.component.scss
@@ -1,4 +1,7 @@
-.logo-img {
-  width: 4em;
-  border-radius: 100%;
+nav {
+  font-size: 1.2em;
+  .logo-img {
+    width: 4em;
+    border-radius: 100%;
+  }
 }
