--- a/esercitazione_9settimana/car-dealership/src/app/pages/home/home.component.html
+++ b/esercitazione_9settimana/car-dealership/src/app/pages/home/home.component.html
@@ -33,8 +33,8 @@
       <div
         class="card h-100 text-blu-scuro"
         [ngClass]="{
-          'bg-success': car.available,
-          'bg-danger': !car.available
+          'bg-info': car.available,
+          'bg-warning': !car.available
         }"
       >
         <img
