--- a/esercitazione_9settimana/car-dealership/src/app/pages/audi/audi.component.html
+++ b/esercitazione_9settimana/car-dealership/src/app/pages/audi/audi.component.html
@@ -1,19 +1,19 @@
 <article class="container">
   <div class="row g-2" *ngIf="audiCarArray[0]">
-    <div class="col-12 text-center">
+    <div class="col-12 text-center pb-4">
+      <h3>Le nostre {{ audiCarArray[0].brand }}</h3>
       <img
         src="{{ audiCarArray[0].brandLogo }}"
         alt="brand logo"
         class="car-brand"
       />
-      <h3>Le nostre {{ audiCarArray[0].brand }}</h3>
     </div>
     <div class="col-12 col-md-6" *ngFor="let car of audiCarArray">
       <div
         class="card h-100 text-blu-scuro"
         [ngClass]="{
-          'bg-success': car.available,
-          'bg-danger': !car.available
+          'bg-info': car.available,
+          'bg-warning': !car.available
         }"
       >
         <img
