Aggiunto footer, custom checkbox per single-to-do,  modifiche grafiche e spazziature

--- a/esercitzione_10settimana/to_do/src/app/main-components/navbar/navbar.component.html
+++ b/esercitzione_10settimana/to_do/src/app/main-components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md bg-porcelain">
   <div class="container-fluid">
     <img
-      src="https://img.freepik.com/premium-vector/list-minimal-vector-line-icon-3d-button-isolated-black-background-premium-vectorxa_570929-1564.jpg"
+      src="../../../assets/apple-touch-icon.png"
       alt="dealership logo"
       class="logo-img"
     />
