--- a/esercitzione_10settimana/to_do/src/app/main-components/single-todo/single-todo.component.html
+++ b/esercitzione_10settimana/to_do/src/app/main-components/single-todo/single-todo.component.html
@@ -1,5 +1,5 @@
 <div
-  class="d-flex justify-content-between text-light p-2"
+  class="d-flex justify-content-between text-light p-2 mb-1 border border-dark rounded"
   [ngClass]="{
     'bg-success': todo.completed,
     'bg-danger': !todo.completed
@@ -10,6 +10,9 @@
     <p>Author: {{ todo.author?.firstName }} {{ todo.author?.lastName }}</p>
   </div>
   <div class="d-flex justify-content-center align-items-center">
-    <input type="checkbox" [(ngModel)]="todo.completed" />
+    <label class="custom-checkbox">
+      <input type="checkbox" [(ngModel)]="todo.completed" />
+      <span class="checkmark"></span>
+    </label>
   </div>
 </div>
