--- a/esercitzione_10settimana/to_do/src/app/pages/home/home.component.html
+++ b/esercitzione_10settimana/to_do/src/app/pages/home/home.component.html
@@ -21,10 +21,7 @@
   </div>
   <div class="container">
     <div class="row g-1" *ngIf="todoArray">
-      <div
-        class="col-12 border border-dark px-0"
-        *ngFor="let todoAll of todoArray"
-      >
+      <div class="col-12 px-0" *ngFor="let todoAll of todoArray">
         <app-single-todo [todo]="todoAll"> </app-single-todo>
       </div>
     </div>
