--- a/esercitzione_10settimana/to_do/src/app/pages/users/users.component.html
+++ b/esercitzione_10settimana/to_do/src/app/pages/users/users.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid p-4 bg-ivory" *ngIf="userArray[0].todos">
   <div class="row g-3">
-    <div class="col-12 col-md-6 col-lg-4" *ngFor="let user of userArray">
+    <div class="col-12 col-md-6 col-xl-4" *ngFor="let user of userArray">
       <div class="card mb-3 h-100">
         <div class="row g-0">
           <div class="col-md-4">
@@ -18,6 +18,9 @@
               <p class="card-text">{{ user.title }}</p>
               <div *ngFor="let todoAll of user.todos">
                 <app-single-todo [todo]="todoAll"></app-single-todo>
+              </div>
+              <div *ngIf="!user.todos?.length">
+                <p class="text-bg-warning">No to-dos assigned</p>
               </div>
             </div>
           </div>
