--- a/esercitazione_11settimana/film_ng/src/app/pages/home/home.component.html
+++ b/esercitazione_11settimana/film_ng/src/app/pages/home/home.component.html
@@ -11,9 +11,7 @@
             Accedi subito per avere accesso al nostro catalogo e conosce altri
             utenti della nostra community
           </p>
-          <button class="btn btn-primary" routerLink="/auth">
-            Accedi subito
-          </button>
+          <button class="btn btn-dark" routerLink="/auth">Accedi subito</button>
         </div>
       </div>
     </div>
