--- a/esercitazione_11settimana/film_ng/src/app/pages/auth/register/register.component.html
+++ b/esercitazione_11settimana/film_ng/src/app/pages/auth/register/register.component.html
@@ -1,34 +1,38 @@
-<h1>Registrati</h1>
+<div class="container">
+  <h1>Registrati</h1>
 
-<form>
-  <input
-    type="text"
-    name="nome"
-    [(ngModel)]="newUser.name"
-    placeholder="Il tuo nome"
-    class="form-control"
-  />
-  <input
-    type="text"
-    name="nome"
-    [(ngModel)]="newUser.username"
-    placeholder="Scegli uno username"
-    class="form-control mt-3"
-  />
-  <input
-    type="email"
-    name="email"
-    [(ngModel)]="newUser.email"
-    placeholder="email"
-    class="form-control mt-3"
-  />
-  <input
-    type="password"
-    name="password"
-    [(ngModel)]="newUser.password"
-    placeholder="password"
-    class="form-control mt-3"
-  />
+  <form>
+    <input
+      type="text"
+      name="nome"
+      [(ngModel)]="newUser.name"
+      placeholder="Il tuo nome"
+      class="form-control"
+    />
+    <input
+      type="text"
+      name="nome"
+      [(ngModel)]="newUser.username"
+      placeholder="Scegli uno username"
+      class="form-control mt-3"
+    />
+    <input
+      type="email"
+      name="email"
+      [(ngModel)]="newUser.email"
+      placeholder="email"
+      class="form-control mt-3"
+    />
+    <input
+      type="password"
+      name="password"
+      [(ngModel)]="newUser.password"
+      placeholder="password"
+      class="form-control mt-3"
+    />
 
-  <button (click)="register()" class="btn btn-primary mt-3">Registrati</button>
-</form>
+    <button (click)="register()" class="btn btn-primary mt-3">
+      Registrati
+    </button>
+  </form>
+</div>
