--- a/esercitazione_11settimana/film_ng/src/styles.scss
+++ b/esercitazione_11settimana/film_ng/src/styles.scss
@@ -1,4 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/scss/functions"; //necessario per l'import "variables"
+@import "../node_modules/bootstrap/scss/variables"; // variabili da modificare
 
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
+// Aggiungo 2 colori a Bootstrap
+$new-theme-colors: (
+  "ocra": #dbbe30,
+  "bluscuro": #131a42,
+  "chiaro": #dfefda,
+);
+
+$theme-colors: map-merge($theme-colors, $new-theme-colors);
+
+@import "../node_modules/bootstrap/scss/bootstrap.scss"; // import bootstrap modificato
+
+//Formattazione generale e partials
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
+/* Modifiche grafiche */
+
+body {
+  font-family: "Poppins", sans-serif !important;
+  font-size: 1.2rem;
+}
