--- a/esercitazione_11settimana/film_ng/src/app/pages/catalogue/catalogue.component.html
+++ b/esercitazione_11settimana/film_ng/src/app/pages/catalogue/catalogue.component.html
@@ -4,21 +4,7 @@
       class="col-12 col-md-6 col-lg-4 col-xl-3"
       *ngFor="let movie of movieArray"
     >
-      <div class="card text-bg-dark h-100">
-        <img
-          [src]="movie.thumbnail"
-          class="card-img-top"
-          [alt]="movie.title + 'thumbnail'"
-        />
-        <div class="card-body">
-          <h5 class="card-title fw-bold">{{ movie.title }}</h5>
-          <p class="card-text">Release: {{ movie.releaseYear }}</p>
-          <p class="card-text">Duration: {{ movie.minutesDuration }} min</p>
-          <button class="btn btn-success" (click)="toggleFavourite(movie.id)">
-            Toggle like
-          </button>
-        </div>
-      </div>
+      <app-single-film [movie]="movie"></app-single-film>
     </div>
   </div>
 </div>
