Commenti metodi funzioni to-do

--- a/esercitazione_10settimana/to_do/src/app/pages/home/home.component.html
+++ b/esercitazione_10settimana/to_do/src/app/pages/home/home.component.html
@@ -12,6 +12,7 @@
     >
       Search
     </button>
+    <!-- Azzera i filtri di ricerca precedenti, recuperando nuovamente l'array del service -->
     <button
       class="btn btn-outline-bluscuro border-bluscuro"
       (click)="completeArray()"
